[girish]gentarting the report for the application

--- a/Facebook_DataDrivenFramework/Facebook_DataDrivenFramework.csproj
+++ b/Facebook_DataDrivenFramework/Facebook_DataDrivenFramework.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
     <PackageReference Include="ExcelLibrary" Version="1.2011.7.31" />
+    <PackageReference Include="ExtentReports" Version="4.1.0" />
+    <PackageReference Include="ExtentReports.Core" Version="1.0.3" />
     <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
@@ -26,12 +28,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="report\" />
     <Folder Include="screenshot\" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="log4net\Log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="log4net\Log4net.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
