--- a/Facebook_DataDrivenFramework/log4net.config
+++ b/Facebook_DataDrivenFramework/log4net.config
@@ -10,7 +10,7 @@
 			</layout>
 		</appender>
 		<appender name="FileAppender" type="log4net.Appender.FileAppender">
-			<file value="C:\Users\girish.v\source\repos\Facebook_DataDrivenFramework\Facebook_DataDrivenFramework\log4net\log.txt" />
+			<file value="C:\Users\girish.v\source\repos\Facebook_DataDrivenFramework\Facebook_DataDrivenFramework\log.txt" />
 			<appendToFile value="true" />
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date %level %message%newline" />
